--- a/.github/workflows/ci-core.yml
+++ b/.github/workflows/ci-core.yml
@@ -183,6 +183,7 @@ jobs:
         uses: smartcontractkit/chainlink-github-actions/go/go-test-results-parsing@2bb3869750e6e1c2d936fe7179784908981548a4 # v2.2.4
         with:
           results-file: ./output.txt
+          output-file: ./output-short.txt
       - name: Store logs artifacts
         if: always()
         uses: actions/upload-artifact@3cea5372237819ed00197afe530f5a7ea3e805c8 # v3.1.0
@@ -190,6 +191,7 @@ jobs:
           name: ${{ matrix.cmd }}_${{ matrix.split.idx }}_logs
           path: |
             ./output.txt
+            ./output-short.txt
             ./race.*
             ./coverage.txt
       - name: Print postgres logs
@@ -279,7 +281,7 @@ jobs:
             -gh_sha=$GITHUB_SHA \
             -gh_event_path=$GITHUB_EVENT_PATH \
             -command=./tools/bin/go_core_tests \
-            `ls -R ./artifacts/go_core_tests*/output.txt`
+            `ls -R ./artifacts/go_core_tests*/output-short.txt`
       - name: Store logs artifacts
         if: always()
         uses: actions/upload-artifact@3cea5372237819ed00197afe530f5a7ea3e805c8 # v3.1.0
