add product based make wrapper commands

--- a/contracts/GNUmakefile
+++ b/contracts/GNUmakefile
@@ -1,18 +1,60 @@
-# To make a snapshot for a specific product, either set the `FOUNDRY_PROFILE` env var or call the target with `FOUNDRY_PROFILE=product`
+# ALL_FOUNDRY_PRODUCTS contains a list of all products that have a foundry
+# profile defined. Adding a product to this list will make it available for
+# snapshotting.
+ALL_FOUNDRY_PRODUCTS = vrf automation llo functions automation-dev
+
+# To make a snapshot for a specific product, either set the `FOUNDRY_PROFILE` env var
+# or call the target with `FOUNDRY_PROFILE=product`
+# When developing with Foundry, you'll most likely already have the env var set
+# to run the tests for the product you're working on. In that case, you can just
+# call `make snapshot` and it will use the env var.
 # env var example
 #		export FOUNDRY_PROFILE=llo
 #		make snapshot
 # make call example
 # 		make FOUNDRY_PROFILE=llo snapshot
 .PHONY: snapshot
-snapshot:
+snapshot: ## Make a snapshot for a specific product.
 	export FOUNDRY_PROFILE=$(FOUNDRY_PROFILE) && forge snapshot --snap gas-snapshots/$(FOUNDRY_PROFILE).gas-snapshot
 
 .PHONY: snapshot-all
-snapshot-all:
-	for foundry_profile in vrf automation llo functions automation-dev ; do \
+snapshot-all: ## Make a snapshot for all products.
+	for foundry_profile in $(ALL_FOUNDRY_PRODUCTS) ; do \
 		make snapshot FOUNDRY_PROFILE=$$foundry_profile ; \
 	done
+
+.PHONY: pnpmdep
+pnpmdep: ## Install solidity contract dependencies through pnpm
+	 pnpm i
+
+.PHONY: abigen
+abigen: ## Build & install abigen.
+	../tools/bin/build_abigen
+
+
+# To generate gethwrappers for a specific product, either set the `FOUNDRY_PROFILE`
+# env var or call the target with `FOUNDRY_PROFILE=product`
+# This uses FOUNDRY_PROFILE, even though it does support non-foundry products. This
+# is to improve the workflow for developers working with Foundry, which is the
+# recommended way to develop Solidity for CL products.
+# env var example
+#		export FOUNDRY_PROFILE=llo
+#		make wrappers
+# make call example
+# 		make FOUNDRY_PROFILE=llo wrappers
+.PHONY: wrappers
+wrappers: pnpmdep abigen ## Recompiles solidity contracts and their go wrappers.
+	./scripts/native_solc_compile_all_$(FOUNDRY_PROFILE)
+	go generate ./core/gethwrappers/go_generate_$(FOUNDRY_PROFILE).go
+
+# This call generates all gethwrappers for all products. It does so based on the
+# assumption that native_solc_compile_all contains sub-calls to each product, and
+# go_generate does the same.
+.PHONY: wrappers-all
+wrappers-all: pnpmdep abigen ## Recompiles solidity contracts and their go wrappers.
+	./scripts/native_solc_compile_all
+	go generate ./core/gethwrappers/go_generate.go
+
 
 help:
 	@echo ""
