--- a/contracts/foundry.toml
+++ b/contracts/foundry.toml
@@ -38,11 +38,18 @@ optimizer_runs = 10000
 src = 'src/v0.8/dev/automation'
 test = 'src/v0.8/dev/automation/test'
 
-
 [profile.llo]
 optimizer_runs = 1000000
 src = 'src/v0.8/llo-feeds'
 test = 'src/v0.8/llo-feeds/test'
 solc_version = '0.8.16'
+
+[profile.shared]
+optimizer_runs = 1000000
+src = 'src/v0.8/shared'
+test = 'src/v0.8/shared/test'
+solc_version = '0.8.19'
+deny_warnings = true
+
 
 # See more config options https://github.com/foundry-rs/foundry/tree/master/config
