--- a/.github/workflows/solidity-hardhat.yml
+++ b/.github/workflows/solidity-hardhat.yml
@@ -56,6 +56,7 @@ jobs:
 
   solidity-coverage-splits:
     needs: [changes, split-tests]
+    if: needs.changes.outputs.changes == 'true'
     name: Solidity Coverage ${{ matrix.split.id }} ${{ fromJSON('["(skipped)", ""]')[needs.changes.outputs.changes == 'true'] }}
     strategy:
       fail-fast: false
@@ -66,34 +67,27 @@ jobs:
       - name: Checkout the repo
         uses: actions/checkout@c85c95e3d7251135ab7dc9ce3241c5835cc595a9 # v3.5.3
       - name: Setup NodeJS
-        if: ${{ needs.changes.outputs.changes == 'true' }}
         uses: ./.github/actions/setup-nodejs
       - name: Setup Hardhat
-        if: ${{ needs.changes.outputs.changes == 'true' }}
         uses: ./.github/actions/setup-hardhat
         with:
           namespace: coverage
       - name: Run coverage
-        if: ${{ needs.changes.outputs.changes == 'true' }}
         env:
           SPLIT: ${{ matrix.split.coverageTests }}
         shell: bash
         run: pnpm coverage --testfiles "$SPLIT"
         working-directory: contracts
       - name: Push coverage
-        if: ${{ needs.changes.outputs.changes == 'true' }}
         run: ./tools/bin/codecov -f ./contracts/coverage.json
       - name: Rename coverage
-        if: ${{ needs.changes.outputs.changes == 'true' }}
         run: mv ./contracts/coverage.json ./contracts/coverage-${{ matrix.split.idx }}.json
       - name: Upload coverage
-        if: ${{ needs.changes.outputs.changes == 'true' }}
         uses: actions/upload-artifact@v3
         with:
           name: solidity-coverage-${{ matrix.split.idx }}
           path: ./contracts/coverage-${{ matrix.split.idx }}.json
       - name: Collect Metrics
-        if: ${{ needs.changes.outputs.changes == 'true' }}
         id: collect-gha-metrics
         uses: smartcontractkit/push-gha-metrics-action@9d03d67aca5cab68f3c8565ee9fde236593bef3f
         with:
@@ -104,33 +98,30 @@ jobs:
 
   solidity-coverage:
     needs: [changes, solidity-coverage-splits]
+    if: needs.changes.outputs.changes == 'true'
     name: Solidity Coverage ${{ fromJSON('["(skipped)", ""]')[needs.changes.outputs.changes == 'true'] }}
     runs-on: ubuntu-latest
     steps:
       - name: Checkout the repo
         uses: actions/checkout@c85c95e3d7251135ab7dc9ce3241c5835cc595a9 # v3.5.3
       - name: Setup NodeJS
-        if: ${{ needs.changes.outputs.changes == 'true' }}
         uses: ./.github/actions/setup-nodejs
       - name: Make coverage directory
-        if: ${{ needs.changes.outputs.changes == 'true' }}
         run: mkdir ./contracts/coverage-reports
       - name: Download coverage
-        if: ${{ needs.changes.outputs.changes == 'true' }}
         uses: actions/download-artifact@v3
         with:
           path: ./contracts/coverage-reports
       - name: Display structure of downloaded files
-        if: ${{ needs.changes.outputs.changes == 'true' }}
         run: ls -R coverage-reports
         working-directory: contracts
       - name: Generate merged report
-        if: ${{ needs.changes.outputs.changes == 'true' }}
         run: pnpm istanbul report text text-summary
         working-directory: contracts
 
   solidity-splits:
     needs: [changes, split-tests]
+    if: needs.changes.outputs.changes == 'true'
     name: Solidity ${{ matrix.split.id }} ${{ fromJSON('["(skipped)", ""]')[needs.changes.outputs.changes == 'true'] }}
     strategy:
       fail-fast: false
@@ -141,21 +132,17 @@ jobs:
       - name: Checkout the repo
         uses: actions/checkout@c85c95e3d7251135ab7dc9ce3241c5835cc595a9 # v3.5.3
       - name: Setup NodeJS
-        if: ${{ needs.changes.outputs.changes == 'true' }}
         uses: ./.github/actions/setup-nodejs
       - name: Setup Hardhat
-        if: ${{ needs.changes.outputs.changes == 'true' }}
         uses: ./.github/actions/setup-hardhat
         with:
           namespace: coverage
       - name: Run tests
-        if: ${{ needs.changes.outputs.changes == 'true' }}
         env:
           SPLIT: ${{ matrix.split.tests }}
         working-directory: contracts
         run: pnpm test -- $SPLIT
       - name: Collect Metrics
-        if: ${{ needs.changes.outputs.changes == 'true' }}
         id: collect-gha-metrics
         uses: smartcontractkit/push-gha-metrics-action@9d03d67aca5cab68f3c8565ee9fde236593bef3f
         with:
