--- a/.github/workflows/solidity-foundry.yml
+++ b/.github/workflows/solidity-foundry.yml
@@ -22,6 +22,7 @@ jobs:
             src:
               - 'contracts/src/v0.8/**/*'
               - '.github/workflows/solidity-foundry.yml'
+              - 'contacts/foundry.toml'
 
   tests:
     strategy:
