--- a/.github/workflows/integration-tests.yml
+++ b/.github/workflows/integration-tests.yml
@@ -689,6 +689,7 @@ jobs:
           channel-id: ${{ secrets.QA_SLACK_CHANNEL }}
           payload: |
             {
+              "text": "Live Smoke Tests Complete",
               "attachments": [
                 {
                   "color": "${{ job.status == 'success' && '#2E7D32' || '#C62828' }}",
@@ -755,13 +756,15 @@ jobs:
           echo "Querying test results"
           echo curl \
           -H "Authorization: Bearer ${{ github.token }}" \
-          '[https://api.github.com/repos/${{github.repository}}/actions/runs/${{ github.run_id }}/jobs' \
-          | jq ."jobs" | jq '.[] | select(.name | startswith("Live Testnet Smoke Tests ${{ matrix.testnet}}"))' | ."status"
+          'https://api.github.com/repos/${{github.repository}}/actions/runs/${{ github.run_id }}/jobs' \
+          | jq '.jobs[] | select(.name == "Live Testnet Smoke Tests ${{ matrix.testnet}}").steps[] \ 
+          | select(.name == "Run Tests").conclusion'
 
           echo "status=$(curl \
           -H "Authorization: Bearer ${{ github.token }}" \
-          '[https://api.github.com/repos/${{github.repository}}/actions/runs/${{ github.run_id }}/jobs' \
-          | jq ."jobs" | jq '.[] | select(.name | startswith("Live Testnet Smoke Tests ${{ matrix.testnet}}"))' | ."status") >> $GITHUB_OUTPUT'
+          'https://api.github.com/repos/${{github.repository}}/actions/runs/${{ github.run_id }}/jobs' \
+          | jq '.jobs[] | select(.name == "Live Testnet Smoke Tests ${{ matrix.testnet}}").steps[] \ 
+          | select(.name == "Run Tests").conclusion') >> $GITHUB_OUTPUT'
 
       - name: Test Details
         uses: slackapi/slack-github-action@e28cf165c92ffef168d23c5c9000cffc8a25e117 # v1.24.0
