--- a/.github/workflows/integration-tests.yml
+++ b/.github/workflows/integration-tests.yml
@@ -754,15 +754,14 @@ jobs:
         id: test-results
         run: |
           echo "Querying test results"
-          curl \
-          -H "Authorization: Bearer ${{ github.token }}" \
-          'https://api.github.com/repos/${{github.repository}}/actions/runs/${{ github.run_id }}/jobs' \
-          | jq '.jobs[] | select(.name == "Live Testnet Smoke Tests ${{ matrix.testnet}}").steps[] | select(.name == "Run Tests").conclusion'
 
           echo "status=$(curl \
           -H "Authorization: Bearer ${{ github.token }}" \
           'https://api.github.com/repos/${{github.repository}}/actions/runs/${{ github.run_id }}/jobs' \
           | jq '.jobs[] | select(.name == "Live Testnet Smoke Tests ${{ matrix.testnet}}").steps[] | select(.name == "Run Tests").conclusion')" >> $GITHUB_OUTPUT
+
+          echo "status=${{ steps.test-results.outputs.status }}"
+          echo "${{ needs.testnet-smoke-tests-notify.outputs.thread_ts }}"
 
       - name: Test Details
         uses: slackapi/slack-github-action@e28cf165c92ffef168d23c5c9000cffc8a25e117 # v1.24.0
@@ -770,6 +769,7 @@ jobs:
           channel-id: ${{ secrets.QA_SLACK_CHANNEL }}
           payload: |
             {
+              "text": "Live Smoke Test Results ${{ matrix.testnet }} ${{ steps.test-results.outputs.status }}",
               "thread_ts": "${{ needs.testnet-smoke-tests-notify.outputs.thread_ts }}",
               "attachments": [
                 {
